--- a/src/css/main.css
+++ b/src/css/main.css
@@ -183,24 +183,12 @@ header > div:nth-child(2) > div > span:last-of-type {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 25em !important;
+  height: 30em !important;
   width: 100%;
 }
 
-.hero h2 {
-  position: absolute;
-  top: 7em;
-  left: 1em;
-  width: 60%;
-  font-size: 3em;
-}
-.hero img {
-  position: relative;
-  top: 2em;
-  left: 2em;
-  clear: right;
-  width: 45%;
-}
+
+
 .dark {
   background: darkgray;
 }
@@ -230,71 +218,211 @@ header > div:nth-child(2) > div > span:last-of-type {
   height: 49%;
   width: auto;
 }
-.art-title {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-.art-1 div {
-  position: relative;
-  top: 6em;
-  padding: 0 0.9em;
-}
-.art-1,
-.art-2 div > a {
-  color: white !important;
-  text-decoration: none;
-}
-.art-1 div > a:nth-child(2) {
-  display: block;
-}
-.art-1 div ul {
-  margin-top: 1em;
-}
-.art-1 div ul li {
-  color: white;
-  display: inline-block;
+
+.art-1 {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F04%2Fjhkjkh.jpg&signature=0a5f0ed2450520d42760e97f5355a3ca")
+    no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
-.ad-ul {
-  display: block;
-  left: 2.5em;
-  position: absolute;
-  top: 30em;
+.art-2 {
+    background: url("https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F04%2Fbitcoin-price-rise.jpg&signature=d5eb53f6e6353ec83e6f23a96f4ddf68")
+    no-repeat;
+    background-size: cover;
+    background-position: center;
 }
-.ad-ul li {
-  display: inline-block;
-}
-.ad-ul li a {
-  color: white;
-}
+
 
 .date {
   display: block;
   float: right;
 }
 
-.art-1 {
-  background: url("https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F04%2Fjhkjkh.jpg&signature=0a5f0ed2450520d42760e97f5355a3ca")
-    no-repeat;
-  background-size: cover;
-  background-position: center;
+.article-0{
+
+    margin: 0 0.9em;
+    margin-top: 12em;
 }
 
-.art-2 {
-  background: url("https://img-cdn.tnwcdn.com/image?fit=1280%2C720&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2019%2F04%2Fbitcoin-price-rise.jpg&signature=d5eb53f6e6353ec83e6f23a96f4ddf68")
-    no-repeat;
-  background-size: cover;
-  background-position: center;
+.article-0 h2{
+    left: 1em;
+    width: 98%;
+    font-size: 3em;
+
 }
 
-@media (max-width: 1015px) {
-  .hero h2 {
-    top: 12em;
-    font-size: 2em;
+.article-0 img{
+    position: relative;
+    bottom: 10rem;
+    left: 1em;
+    clear: right;
+    width: 50%;
+}
+
+.article-0 li {
+    color: grey;
+}
+
+.article-0 li {
+    color: grey;
+}
+
+
+
+.article-0 a:nth-child(1) {
+    display: block;
+    text-decoration: none;
+    font-weight: lighter;
+}
+.article-0 a:nth-child(2) {
+    display: block;
+
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.4em;
+}
+
+.article-0 ul li {
+    display: inline-block;
+    font-size: 13px;
+
+    padding-right: 0.1em;
+}
+
+.article-0 ul li a {
+    text-decoration: none;
+    color: rgb(165, 165, 165);
+    font-size: 13px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.article-1 ,
+.article-2{
+    position: absolute;
+    margin: 0 0.9em;
+    margin-top: 6em;
+    line-height: 1.5em;
+}
+
+.article-1 li {
+    color: grey;
+}
+
+.article-2 li {
+    color: grey;
+}
+
+.article-1 {
+    margin-top: 6em;
+}
+
+.article-1 a:nth-child(1) {
+    display: block;
+    text-decoration: none;
+    font-weight: lighter;
+}
+.article-1 a:nth-child(2) {
+    display: block;
+
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.4em;
+}
+
+.article-1 ul li {
+    display: inline-block;
+    font-size: 13px;
+
+    padding-right: 0.1em;
+}
+
+.article-1 ul li a {
+    text-decoration: none;
+    color: rgb(165, 165, 165);
+    font-size: 13px;
+}
+
+.article-2 a:nth-child(1) {
+    display: block;
+    text-decoration: none;
+    font-weight: lighter;
+}
+.article-2 a:nth-child(2) {
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.4em;
+}
+
+.article-2 ul li {
+    display: inline-block;
+    font-size: 13px;
+
+    padding-right: 0.1em;
+}
+
+.article-2 ul li a {
+    text-decoration: none;
+    color: rgb(165, 165, 165);
+    font-size: 13px;
+}
+
+@media only screen and (max-width: 1015px) {
+
+
+
+
+
+  .article-0 h2 {
+
+    font-size: 1em;
+
   }
   .date {
     display: none;
   }
+
+  .hero{
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
+        height: auto;
+      margin-bottom: 10em;
+
+  }
+
+  .hero-col-1, .hero-col-2{
+
+      width: 100%;
+      height: 400px;
+  }
+
+    .hero-col-3{
+        margin-top: .5em;
+        height: 400px;
+    }
+
+    .article-0 img{
+        display: none;
+    }
+
+
 }
 
 @media only screen and (min-width: 768px) {
