--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,20 +26,26 @@ body {
 }
 
 .gutter-left-1 {
-  margin-left: 2%;
+  margin-left: 1em;
+}
+
+.gutter-top {
+  margin-top: 6em !important;
 }
 .gutter-bottom {
   margin-bottom: 4em !important;
 }
 
 .col-1-3 {
-  width: 32.3%;
+  margin-top: 4em !important;
+  width: 32%;
   display: inline-block;
   height: auto;
 }
 
 .col-1-4 {
-  width: 25%;
+  margin-top: 1em;
+  width: 23.5%;
   height: auto;
   display: inline-block;
 }
@@ -219,7 +225,6 @@ header > div:nth-child(2) > div > span:last-of-type {
   height: 15.7rem;
 }
 
-
 .section-3 {
   width: 93%;
   margin: 0 auto;
@@ -324,7 +329,7 @@ header > div:nth-child(2) > div > span:last-of-type {
   width: 23%;
   margin: 0 0.86%;
   display: inline-table;
-  
+
   background-color: #fffaf8;
 }
 .section-3 > span {
@@ -346,8 +351,6 @@ header > div:nth-child(2) > div > span:last-of-type {
 }
 
 @media only screen and (max-width: 1020px) {
-
-  
   .section-2 > div {
     width: 31%;
   }
@@ -355,8 +358,8 @@ header > div:nth-child(2) > div > span:last-of-type {
     margin-bottom: 1rem;
     width: 100%;
   }
-  .section-2 > div:nth-child(4n+1) div:after {
-    display:block;
+  .section-2 > div:nth-child(4n + 1) div:after {
+    display: block;
   }
 
   header > div:nth-child(2) > div > span {
@@ -366,8 +369,7 @@ header > div:nth-child(2) > div > span:last-of-type {
   header > div:nth-child(2) > div > div:nth-last-of-type(1) > img {
     display: none;
   }
-  footer > div:first-of-type > div  {
-    
+  footer > div:first-of-type > div {
     width: auto;
   }
   footer > div:first-of-type > div:nth-of-type(2) {
@@ -382,9 +384,8 @@ header > div:nth-child(2) > div > span:last-of-type {
     text-align: center;
   }
   .section-3 h1:last-of-type {
-
     margin-top: 1.5rem;
-}
+  }
 }
 
 @media only screen and (max-width: 589px) {
@@ -394,27 +395,23 @@ header > div:nth-child(2) > div > span:last-of-type {
   .section-2 > div {
     width: 47%;
   }
-  .section-2 > div:nth-child(3n+1) div:after {
-    display:block;
+  .section-2 > div:nth-child(3n + 1) div:after {
+    display: block;
   }
   .section-3 > div {
     width: 100%;
-    display:inline-block;
+    display: inline-block;
   }
-
 }
 
 /* setion 4 */
 
 .section-4 {
   margin: 0 auto;
-  width: 93%;
+  width: 72em;
   padding: 2em 1em 0 1em;
 
   height: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
 }
 
 .section-4 h2 {
@@ -518,16 +515,27 @@ header > div:nth-child(2) > div > span:last-of-type {
 }
 
 /* Section */
-.secion-5-wrapper {
-  margin: 0 auto !important;
-  width: 72rem !important;
-}
+
 .section-5 {
+  margin: 0 auto;
+  width: 72rem !important;
   padding: 2em 1em 0 1em;
   height: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+}
+
+.section-5 > h2 {
+  color: #f42;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.section-5 > p {
+  color: #f42;
+  font-weight: 100;
+  text-align: right;
+  position: relative;
+  right: 2em;
+  bottom: 0.5rem;
 }
 
 .section-5 div {
@@ -576,6 +584,41 @@ header > div:nth-child(2) > div > span:last-of-type {
   }
   .secion-5-wrapper {
     width: 100% !important;
+  }
+  .section-5 {
+    margin-right: 2em !important;
+    width: 90% !important;
+  }
+}
+
+@media (max-width: 1078px) {
+  .col-1-4 {
+    width: 31%;
+  }
+  .box-4 {
+    margin-left: 0 !important;
+    margin-right: 1em;
+  }
+  .box-7 {
+    margin-left: 0 !important;
+  }
+  .section-5 {
+    width: 100% !important;
+  }
+}
+
+@media (max-width: 1023px) {
+  .col-1-3 {
+    width: 47.5%;
+  }
+
+  .section-4-box-3,
+  .section-4-box-5,
+  .section-4-box-8 {
+    margin-left: 0 !important;
+  }
+  .section-4-box-4 {
+    margin-left: 1em !important;
   }
 }
 
